Now using Alire gprbuild 25.0.1.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23621 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -226,9 +226,11 @@ project files <b><tt>aarch64-muntsos-linux-gnu.cgpr</tt></b> and
 building with <b><tt>gnatmake</tt></b> and <b><tt>gprbuild</tt></b>.</p>
 </li>
 <li>
-<p>17 August 2025 -- Fussing around with <b><tt>gprbuild</tt></b> has driven me
-to incorporate a known working version of it into each of the cross-toolchain
-packages. The OS native <b><tt>gprbuild</tt></b> is no longer necessary.</p>
+<p>18 August 2025 -- I have now incorporated a known working version of
+<b><tt>gprbuild</tt></b> (presently Alire <b><tt>gprbuild</tt></b> 25.0.1) into
+each of the cross-toolchain packages. A Linux distribution
+<b><tt>gprbuild</tt></b> is no longer necessary for building Ada programs for
+<b>MuntsOS</b> targets.</p>
 </li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
