Upgraded to Debian 13 (Trixie)
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23640 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -232,6 +232,11 @@ each of the cross-toolchain packages. A Linux distribution
 <b><tt>gprbuild</tt></b> is no longer necessary for building Ada programs for
 <b>MuntsOS</b> targets.</p>
 </li>
+<p>23 August 2025 -- I have now upgraded my build server to <a href=
+"https://www.debian.org/News/2025/20250809">Debian 13 (Trixie)</a> and created
+the <a href="https://repo.munts.com/debian13">Munts Technologies Debian package
+repository for Debian 13</a>. I plan to maintain the Debian 12 package
+repository until the end of this 2025.</p>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
@@ -537,7 +542,7 @@ the corresponding GCC cross-toolchain package.</p>
 <a href="https://www.adaic.org/ada-resources/standards/ada22">Ada 2022</a>, and
 built for <a href="https://www.debian.org">Debian</a> Linux (x86-64 <i>and</i>
 ARM64) development host computers are available at either:</p>
-<a href="https://repo.munts.com/debian12">https://repo.munts.com/debian12</a>
+<a href="https://repo.munts.com/debian13">https://repo.munts.com/debian13</a>
 (Debian package repository)<br>
 <a href=
 "https://repo.munts.com/muntsos/toolchain-debs">https://repo.munts.com/muntsos/toolchain-debs</a>
