--- a/README.html
+++ b/README.html
@@ -235,6 +235,22 @@ the <a href="https://repo.munts.com/debian13">Munts Technologies Debian package
 repository for Debian 13</a>. I plan to maintain the Debian 12 package
 repository until the end of 2025.</p>
 </li>
+<li>
+<p>6 September 2025 -- I have added support for scaled ADC (Analog to Digital
+Converter) inputs. Some ADC chips with an internal voltage reference populate
+the scale factor files (<b><tt>in_voltage(Y)_scale</tt></b> <i>et al</i>)
+automatically. Others, especially those with an external voltage reference,
+require some magic in a device tree overlay to configure the scaling. I've
+updated the <b><tt>MUNTS-0018</tt></b>, <b><tt>Pi3ClickShield</tt></b>, and the
+<b><tt>Pi4ClickShield</tt></b> overlays to support scaling. I've also added new
+overlays for the Texas Instruments <a href=
+"https://www.ti.com/lit/ds/symlink/adc121c021.pdf">ADC121C021</a> (the ADC on
+the <a href="https://wiki.seeedstudio.com/Grove-I2C_ADC">Grove I<sup>2</sup>C
+ADC</a> module) and the Microchip <a href=
+"https://ww1.microchip.com/downloads/aemDocuments/documents/OTH/ProductDocuments/DataSheets/22226a.pdf">
+MCP3428</a> (the ADC on the Mikroelektronika <a href=
+"https://www.mikroe.com/adc-3-click">ADC 3 Click</a>) that support scaling.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
