Added missing C after I2
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23688 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/RaspberryPi/overlays/README.html
+++ b/boot/RaspberryPi/overlays/README.html
@@ -2,7 +2,7 @@
 <p>Here are some collected device tree overlays for Raspberry Pi boards that
 have been written from scratch or customized from the kernel source
 distribution for MuntsOS.</p>
-<p>For I<sup>2</sup> devices, the easiest way to determine the correct slave
+<p>For I<sup>2</sup>C devices, the easiest way to determine the correct slave
 address is to run <b><tt>i2cdetect -y 1</tt></b> before and after attaching the
 device and see what changes. Then you can add the proper
 <b><tt>dtoverlay</tt></b> command to <b><tt>/boot/config.txt</tt></b></p>
