Added support for scaled DAC outputs.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23737 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -242,14 +242,12 @@ the scale factor files (<b><tt>in_voltage(Y)_scale</tt></b> <i>et al</i>)
 automatically. Others, especially those with an external voltage reference,
 require some magic in a device tree overlay to configure the scaling. I've
 updated the <b><tt>MUNTS-0018</tt></b>, <b><tt>Pi3ClickShield</tt></b>, and the
-<b><tt>Pi4ClickShield</tt></b> overlays to support scaling. I've also added new
-overlays for the Texas Instruments <a href=
-"https://www.ti.com/lit/ds/symlink/adc121c021.pdf">ADC121C021</a> (the ADC on
-the <a href="https://wiki.seeedstudio.com/Grove-I2C_ADC">Grove I<sup>2</sup>C
-ADC</a> module) and the Microchip <a href=
-"https://ww1.microchip.com/downloads/aemDocuments/documents/OTH/ProductDocuments/DataSheets/22226a.pdf">
-MCP3428</a> (the ADC on the Mikroelektronika <a href=
-"https://www.mikroe.com/adc-3-click">ADC 3 Click</a>) that support scaling.</p>
+<b><tt>Pi4ClickShield</tt></b> overlays to support scaling.</p>
+</li>
+<li>
+<p>12 September 2025 -- Added support for scaled Linux Industrial I/O DAC
+(Digital to Analog Converter) outputs. Added more Raspberry Pi device tree
+overlays for a number of ADC and DAC boards and modules.</p>
 </li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
