--- a/README.html
+++ b/README.html
@@ -253,7 +253,17 @@ overlays for a number of ADC and DAC boards and modules.</p>
 <li>
 <p>15 September 2025 -- Added support for Linux Industrial I/O temperature
 sensors. Added more Raspberry Pi device tree overlays for a number of
-temperature sensors and modules.</p>
+temperature sensors and modules. Please note that most or all of the mikroBUS
+temperature sensor modules suffer significant self-heating from the CPU board.
+The Mikroelektronika <a href="https://www.mikroe.com/thermo-click">Thermo
+Click</a> thermocouple interface module is a notable exception, as the
+thermocouple junction can be placed away from the CPU board. <a href=
+"https://wiki.seeedstudio.com/Grove_System">Grove</a>, <a href=
+"https://digilent.com/shop/products/fpga-boards/expansion-modules/pmods/?CommunicationProtocol=I2C">
+Pmod</a>, <a href="https://www.sparkfun.com/qwiic">Qwiic</a>, and <a href=
+"https://learn.adafruit.com/introducing-adafruit-stemma-qt">Stemma</a>
+I<sup>2</sup>C temperature sensor modules can also be placed away from the CPU
+board.</p>
 </li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
