More upgrades and fixes.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23815 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -265,6 +265,14 @@ Pmod</a>, <a href="https://www.sparkfun.com/qwiic">Qwiic</a>, and <a href=
 I<sup>2</sup>C temperature sensor modules can also be placed away from the CPU
 board.</p>
 </li>
+<li>
+<p>26 September 2025 -- Upgraded the .Net Runtime to 9.0.9. Upgraded the
+Raspberry Pi kernel to 6.12.48. Upgraded rpcbind to 1.2.8, iw to 6.17,
+mailutils to 3.20, and nano to 8.6. Imported latest (24 Sep 2025) boot files
+from Raspberry Pi OS. Fixed or suppressed compiler warnings in Ada example
+packages and programs. Symlink <b><tt>/run</tt></b> to <b><tt>/var/run</tt></b>
+for <b><tt>rpcbind</tt></b>.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
