Added link to Debian 12 (Trixie) package repository.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23836 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -578,13 +578,15 @@ the corresponding GCC cross-toolchain package.</p>
 <a href="https://www.adaic.org/ada-resources/standards/ada22">Ada 2022</a>, and
 built for <a href="https://www.debian.org">Debian</a> Linux (x86-64 <i>and</i>
 ARM64) development host computers are available at either:</p>
+<a href="https://repo.munts.com/debian12">https://repo.munts.com/debian12</a>
+(Debian package repository)<br>
 <a href="https://repo.munts.com/debian13">https://repo.munts.com/debian13</a>
 (Debian package repository)<br>
 <a href=
 "https://repo.munts.com/muntsos/toolchain-debs">https://repo.munts.com/muntsos/toolchain-debs</a>
 (just the package files).
 <p>x86-64 RPM packages containing the exact same binaries, and known to work on
-Fedora 40 and RHEL 9.1 and its derivatives, are available at:</p>
+Fedora 42 and RHEL 9 and its derivatives, are available at:</p>
 <a href=
 "https://repo.munts.com/muntsos/toolchain-rpms">https://repo.munts.com/muntsos/toolchain-rpms</a>
 <h2><a href="https://alire.ada.dev">Alire</a> Crates</h2>
