Announce cross-toolchains for Windows.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24024 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -322,7 +322,7 @@ yet.</p>
 </li>
 <li>
 <p>16 November 2025 -- I have <i>finally</i> created <b>MuntsOS</b>
-croos-toolchains that run on x86-64 Windows 10 or 11. The aggravation of
+cross-toolchains that run on x86-64 Windows 10 or 11. The aggravation of
 dealing with Windows' case insensitive filenames and the dependency upon either
 <a href="https://cygwin.com">Cygwin</a> or <a href=
 "https://www.msys2.org/">MSYS2</a>, compared to just running Debian Linux in
@@ -330,8 +330,8 @@ dealing with Windows' case insensitive filenames and the dependency upon either
 Linux</a>, probably makes this a <a href=
 "https://en.wikipedia.org/wiki/Pyrrhic_victory">Pyrrhic victory</a> for all but
 Ada developers using <a href="https://alire.ada.dev">Alire</a> on Windows
-(<i>i.e.</i> the original use case: People bringing Windows computers to my Ada
-on <b>MuntsOS</b> tutorial class at the 2018 Ada-Europe Conference in Lisbon).
+(<i>i.e.</i> my original use case: People bringing Windows computers to my Ada-
+on-<b>MuntsOS</b> tutorial class at the 2023 Ada-Europe Conference in Lisbon).
 Read the gory details in <a href=
 "https://repo.munts.com/muntsos/doc/AppNote24-Setup-Win64.pdf">Application Note
 #24</a>.</p>
