Added Win64 stuff to "Quick Setup..." section.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24048 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -330,9 +330,9 @@ dealing with Windows' case insensitive filenames and the dependency upon either
 Linux</a>, probably makes this a <a href=
 "https://en.wikipedia.org/wiki/Pyrrhic_victory">Pyrrhic victory</a> for all but
 Ada developers using <a href="https://alire.ada.dev">Alire</a> on Windows
-(<i>i.e.</i> my original use case: People bringing Windows computers to my Ada-
-on-<b>MuntsOS</b> tutorial class at the 2023 Ada-Europe Conference in Lisbon).
-Read the gory details in <a href=
+(<i>i.e.</i> my original use case: People bringing Windows computers to my
+<nobr>Ada-on-<b>MuntsOS</b></nobr> tutorial class at the 2023 Ada-Europe
+Conference in Lisbon). Read the gory details in <a href=
 "https://repo.munts.com/muntsos/doc/AppNote24-Setup-Win64.pdf">Application Note
 #24</a>.</p>
 </li>
@@ -341,14 +341,18 @@ Read the gory details in <a href=
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
 environment onto a development <b>host computer</b> are found in <a href=
 "https://repo.munts.com/muntsos/doc/AppNote1-Setup-Debian.pdf">Application Note
-#1</a> and <a href=
+#1</a>, <a href=
 "https://repo.munts.com/muntsos/doc/AppNote2-Setup-RPM.pdf">Application Note
-#2</a>. Or just download and run one of the following quick setup scripts:</p>
+#2</a>, or <a href=
+"https://repo.munts.com/muntsos/doc/AppNote24-Setup-Win64.pdf">Application Note
+#24</a>. Or just download and run one of the following quick setup scripts:</p>
 <a href=
 "https://repo.munts.com/muntsos/scripts/setup-debian">setup-debian</a><br>
 <a href=
 "https://repo.munts.com/muntsos/scripts/setup-fedora">setup-fedora</a><br>
-<a href="https://repo.munts.com/muntsos/scripts/setup-rhel">setup-rhel</a>
+<a href="https://repo.munts.com/muntsos/scripts/setup-rhel">setup-rhel<br></a>
+<a href=
+"https://repo.munts.com/muntsos/scripts/setup-win64.bat">setup-win64.bat</a>
 <p>Instructions for installing <b>MuntsOS</b> to a <b>target computer</b> are
 found in <a href=
 "https://repo.munts.com/muntsos/doc/AppNote3-Installation-from-Linux.pdf">Application
