Upgraded the .Net Runtime to 10.0.0 (LTS).
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24054 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -336,6 +336,9 @@ Conference in Lisbon). Read the gory details in <a href=
 "https://repo.munts.com/muntsos/doc/AppNote24-Setup-Win64.pdf">Application Note
 #24</a>.</p>
 </li>
+<li>
+<p>29 November 2025 -- Upgraded the .Net Runtime to 10.0.0 (LTS).</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
