Upgraded the Raspberry Pi kernel to 6.12.60.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24081 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -286,8 +286,8 @@ to the <a href="https://repo.munts.com/muntsos/attic">attic.</a></p>
 </li>
 <li>
 <p>25 October 2025 -- I have a bag full of surplus 32-bit <a href=
-"https://www.raspberrypi.com/products/raspberry-pi-zero">Raspberry Pi
-Zero</a>'s and evidently too much time on my hands. After upgrading the
+"https://www.raspberrypi.com/products/raspberry-pi-zero-w">Raspberry Pi Zero
+W</a>'s and evidently too much time on my hands. After upgrading the
 <b>MuntsOS</b> AArch64 and RISCV64 cross-toolchain packages to Crosstool-NG
 1.28.0 / GCC 15.2.0, I began to wonder if it would be possible to build a new
 cross-toolchain for the obsolete Raspberry Pi 1 as well, something I hadn't
@@ -338,6 +338,14 @@ Conference in Lisbon). Read the gory details in <a href=
 </li>
 <li>
 <p>29 November 2025 -- Upgraded the .Net Runtime to 10.0.0 (LTS).</p>
+</li>
+<li>
+<p>2 December 2025 -- Upgraded Raspberry Pi kernels to 6.12.60. I have
+reinstated <b>MuntsOS</b> support (kernels, extensions, and Thin Servers) for
+the obsolete 32-bit ARMv6 Raspberry Pi 1, to enable using a stockpile of
+<a href="https://www.raspberrypi.com/products/raspberry-pi-zero-w">Raspberry Pi
+Zero W</a>'s. From its product web page: <i>Raspberry Pi Zero W will remain in
+production until at least January 2030.</i></p>
 </li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
