Added link to reinstated Alire crate muntsos_raspberrypi1
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24082 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -671,7 +671,11 @@ Fedora 42 and RHEL 9 and its derivatives, are available at:</p>
 <h2><a href="https://alire.ada.dev">Alire</a> Crates</h2>
 <p><a href="https://alire.ada.dev/crates/muntsos_aarch64.html"><img alt=
 "muntsos_aarch64" src=
-"https://img.shields.io/endpoint?url=https://alire.ada.dev/badges/muntsos_aarch64.json"></a></p>
+"https://img.shields.io/endpoint?url=https://alire.ada.dev/badges/muntsos_aarch64.json"></a>
+<a href="https://alire.ada.dev/crates/muntsos_raspberrypi1.html"><img alt=
+"muntsos_raspberrypi1" src=
+"https://img.shields.io/endpoint?url=https://alire.ada.dev/badges/muntsos_raspberrypi1.json">
+</a></p>
 <p>Adding the <b><tt>muntsos_aarch64</tt></b> crate to an Alire Ada program
 project transforms said project into one that produces a cross-compiled AArch64
 program for <b>MuntsOS</b>. The <b><tt>muntsos_aarch64</tt></b> crate depends
@@ -681,6 +685,8 @@ See <a href=
 "https://repo.munts.com/muntsos/doc/AppNote7-Flash-LED-Ada-Alire.pdf">Application
 Note #7</a> for a complete example using the <b><tt>alr</tt></b> command line
 tool.</p>
+<p>The <b><tt>muntsos_raspberrypi1</tt></b> crate functions in an identical
+manner for 32-bit ARMv6 Raspberry Pi 1 target computers.</p>
 <p id="alire_orphans">Please note that the other <b>MuntsOS</b> library crates
 in Alire (<i>e.g.</i> <b>muntsos_beaglebone</b>) are unusable due to breaking
 changes in <b><tt>alr</tt></b> 2.0. Unfortunately, Alire project policies
