Upgraded Raspberry Pi kernels to 6.12.62. Upgraded OpenSSH to 10.2p1. Upgraded mailutils to 3.21. Upgraded nano to 8.7. Upgraded the .Net Core Runtime to 10.0.1. Added librabbitmq extension package.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24126 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -347,6 +347,11 @@ the obsolete 32-bit ARMv6 Raspberry Pi 1, to enable using a stockpile of
 Zero W</a>'s. From its product web page: <i>Raspberry Pi Zero W will remain in
 production until at least January 2030.</i></p>
 </li>
+<li>
+<p>23 December 2025 -- Upgraded Raspberry Pi kernels to 6.12.62. Upgraded
+OpenSSH to 10.2p1. Upgraded mailutils to 3.21. Upgraded nano to 8.7. Upgraded
+the .Net Core Runtime to 10.0.1. Added librabbitmq extension package.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
