No more Windows cross-toolchain tarballs.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24135 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -352,6 +352,13 @@ production until at least January 2030.</i></p>
 OpenSSH to 10.2p1. Upgraded mailutils to 3.21. Upgraded nano to 8.7. Upgraded
 the .Net Core Runtime to 10.0.1. Added librabbitmq extension package.</p>
 </li>
+<li>24 December 2025 -- I am no longer distributing the Windows
+cross-toolchains in tarballs. Instead, you will need to install and update them
+from git repositories. See the updated <a href=
+"https://repo.munts.com/muntsos/scripts/setup-win64.bat">setup-win64.bat</a>
+and <a href=
+"https://repo.munts.com/muntsos/doc/AppNote24-Setup-Win64.pdf">Application Note
+#24</a> for more information.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
